--- a/ken.html
+++ b/ken.html
@@ -9,11 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Eli Robinson" />
 
 <meta name="date" content="2023-02-16" />
 
-<title>Eli</title>
+<title>Ken</title>
 
 <script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -265,30 +264,17 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Eli</h1>
-<h4 class="author">Eli Robinson</h4>
+<h1 class="title toc-ignore">Ken</h1>
 <h4 class="date">2023-02-16</h4>
 
 </div>
 
 
-<div id="some-places-i-have-been" class="section level2">
-<h2>Some places I have been</h2>
 <ul>
-<li>North America
-<ul>
-<li>USA</li>
-<li>Canada</li>
-<li>Mexico</li>
-<li>Costa Rica</li>
-</ul></li>
-<li>Europe
-<ul>
-<li>France</li>
-<li>Switzerland</li>
-</ul></li>
+<li>PhD Student in DEA</li>
+<li>Age 27</li>
+<li>Enrolled in NTRES 6100</li>
 </ul>
-</div>
 
 
 
